# homelabv3-infra

./: .editorconfig  .flake8  .gitignore  .kube-linter.yaml  .pre-commit-config.yaml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yaml  devenv.nix  devenv.yaml  index.html  justfile  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  secretspec.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml  pull_request_template.md  renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.github/renovate/: ansible.json5  autoMerge.json5  cnpg.json5  devContainers.json5  flux.json5  grafanaDashboards.json5  groups.json5  helm.json5  kustomization.json5  labels.json5  packer.json5  semanticCommits.json5  terraform.json5
.github/workflows/: ansible-lint.yml  doc.yml  documentation.yml  kubernetes-lint.yml  lint.yml  octodns.yml  packer-lint.yml  pluto.yml  renovate-lint.yml  renovatebot-check.yml  terraform-lint.yml
.taskfiles/ansible/: Taskfile.yaml
.taskfiles/docs/: Taskfile.yaml
.taskfiles/flatcar/: Taskfile.yaml
.taskfiles/kubernetes/: Taskfile.yaml
.taskfiles/octodns/: Taskfile.yaml
.taskfiles/packer/: Taskfile.yaml
ansible/: .ansible-lint  .yamllint  ansible.cfg  deploy_infra.yml  deploy_packer.yml  deploy_terraform.yml  hosts  inventory.proxmox.example  inventory.vmware.example  requirements.yml
ansible/host_vars/: 192.168.10.21.yml  192.168.10.22.yml  localhost.yml  vpn.unicornafk.fr.yml
ansible/playbooks/: add-ssh-keys.yml  disable_slaac.yml  generate-certs.yml  lvm_resize.yml  parted.yml  utils.yml
argocd/: applicationset.yaml  kustomization.yaml
argocd/as212510-net/: kustomization.yaml  values.yaml
argocd/bazarr/: kustomization.yaml  values.yaml
argocd/blackbox-exporter/: kustomization.yaml  values.yaml
argocd/cnpg/: kustomization.yaml  values.yaml
argocd/csi-driver-smb/: kustomization.yaml
argocd/flaresolverr/: kustomization.yaml  values.yaml
argocd/grafana/: kustomization.yaml  values.yaml
argocd/grafana-agent/: kustomization.yaml  values.yaml
argocd/grafana-loki/: kustomization.yaml
argocd/grafana-mimir/: kustomization.yaml  values.yaml
argocd/jellyfin/: kustomization.yaml  values.yaml
argocd/jellyseerr/: kustomization.yaml  values.yaml
argocd/k8up/: kustomization.yaml  values.yaml
argocd/kea-exporter/: kustomization.yaml  values.yaml  values_1.yaml  values_2.yaml
argocd/keycloak/: kustomization.yaml
argocd/keycloak-operator/: kustomization.yaml
argocd/kube-prometheus-stack/: kustomization.yaml  values.yaml
argocd/minio-operator/: kustomization.yaml  values.yaml
argocd/overseerr/: kustomization.yaml
argocd/plex/: kustomization.yaml  values.yaml
argocd/prometheus-pushgateway/: kustomization.yaml  values.yaml
argocd/prometheus-pve-exporter/: kustomization.yaml  values.yaml
argocd/prowlarr/: kustomization.yaml  values.yaml
argocd/qbittorrent/: kustomization.yaml  values.yaml
argocd/radarr/: kustomization.yaml  values.yaml
argocd/snmp-exporter/: kustomization.yaml
argocd/sonarr/: kustomization.yaml  values.yaml
argocd/stakater/: kustomization.yaml  values.yaml
assets/javascripts/: bundle.5090c770.min.js  bundle.83f73b43.min.js  bundle.c8d2eff1.min.js
docs/: index.md
docs/getting-started/: index.md  installation.md  upgrade.md
docs/guide/: index.md
docs/home/: architecture.md  choices.md
docs/stylesheets/: extra.css
flatcar/: base.bu  base.k3s.bu  example.env  k3s-agent.bu  k3s-server.bu
flatcar/data/: default.yml  k8s-1.yml  k8s-2.yml  k8s-3.yml
flatcar/files/: audit.rules  ca-certificates.service  modprobe_blacklist.conf  nftables.conf  sshd.conf  sysctl.conf  timesyncd.conf
flatcar/templates/: network.conf.j2  resolved.conf.j2  timesyncd.conf.j2
getting-started/: index.html
getting-started/installation/: index.html
getting-started/upgrade/: index.html
guide/: index.html
guide/ansible/: index.html
guide/argocd/: index.html
guide/ci_cd/: index.html
guide/dns_blocklist/: index.html
guide/kubernetes/: index.html
guide/octodns/: index.html
guide/packer/: index.html
guide/proxmox_acme/: index.html
guide/proxmox_exporter/: index.html
octodns/: adminafk.fr.yaml  as212510.net.yaml  config.yaml  unicornafk.fr.yaml
packer/: build.sh
search/: search_index.json
ssh_pub_keys/: lortega.pub
ssl/: unicornafk.crt
terraform/: account.example  env.hcl  secrets.example  terragrunt.hcl  vars.sh
(+1196 files in other folders)
