[project]
name = "homelabv3_infra"
version = "0.0.0"
description = "Homelab management infrastructure"
readme = "README.md"
authors = [{ name = "Ludovic Ortega", email = "ludovic.ortega@adminafk.fr" }]
classifiers = [
  "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]

requires-python = ">=3.12,<4.0.0"

[project.urls]
Funding = "https://ko-fi.com/ludovicortega"
Homepage = "https://github.com/M0NsTeRRR/homelabv3-infra"
Issues = "https://github.com/M0NsTeRRR/homelabv3-infra/issues"
Repository = "https://github.com/M0NsTeRRR/homelabv3-infra"

[project.optional-dependencies]
ansible = [
  "ansible-core~=2.20.5",
  "ansible-lint~=26.4.0",
  "dnspython~=2.8.0",
  "netaddr~=1.3.0",
  "cryptography~=48.0.0",
  "passlib~=1.7.4",
  # https://foss.heptapod.net/python-libs/passlib/-/issues/190
  "bcrypt~=4.0.1",
  "requests~=2.34.2",
  "kubernetes~=35.0.0",
  "PyYAML~=6.0.3",
  "jsonpatch~=1.33",
]
documentation = ["mkdocs-material[imaging]~=9.7.6", "pytz~=2026.2"]
octodns = [
  "octodns~=1.15.0",
  "octodns-infomaniak~=0.1.6",
  "octodns-mikrotik~=0.1.2",
]

[tool.uv]
package = false
